syntax = "proto3";
package text;


message TextRequest {
    int64 request_id = 1;
    string text = 2;
    string source = 3;
    repeated string tags  = 4;
    string model = 5;
}